Updated '_art/mar-adentro-ilha-do-mel-2018-1.html' via CloudCannon

--- a/_art/mar-adentro-ilha-do-mel-2018-1.html
+++ b/_art/mar-adentro-ilha-do-mel-2018-1.html
@@ -2,11 +2,11 @@
 layout: photo
 title: Mar adentro_Ilha do Mel_2018
 artist: bruno
-co-artist:
+co-artist: fellipe
 image: /assets/images/aef69688-54a4-4ddd-8e97-6e85225bce49.jpeg
-description_html: |-
-  O Mar mostra sua força.
-  A sua força mostra o a Mar.
+description_html: >-
+  <p>A profundidade</p><p>Pode
+  ser</p><p>Reveladora.</p><p>&nbsp;</p><p>Coragem!</p>
 dimensions: 60cmx90cm
 orientation: Landscape
 print_standard: Fine Art 40gm
