Updated '_art/paraiso-perdido-gus-schiavon.html' via CloudCannon

--- a/_art/paraiso-perdido-gus-schiavon.html
+++ b/_art/paraiso-perdido-gus-schiavon.html
@@ -4,7 +4,11 @@ title: Paraíso Perdido
 artist: gus
 co-artist: alice
 image: /assets/images/gus-schiavon-0001.jpg
-description_html: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor harum placeat quasi tenetur sequi repudiandae incidunt vel?
+description_html: >-
+  <p>Genu&iacute;na, sabedoria</p><p>que n&atilde;o fala</p><p>est&aacute; nas
+  cores do</p><p>natural</p><p>se veste de eventos</p><p>e avisos</p><p>esculpe
+  paisagens</p><p>maravilha vistas</p><p>invade almas</p><p>e faz
+  esperan&ccedil;ar o</p><p>amanh&atilde;!</p>
 dimensions: 105cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
@@ -13,3 +17,4 @@ price: 2300
 other_dimensions:
   - size:
 ---
+
