--- a/_art/pegada-humana-i-ilha-do-mel-2020.html
+++ b/_art/pegada-humana-i-ilha-do-mel-2020.html
@@ -2,10 +2,13 @@
 layout: photo
 title: Pegada Humana I_Ilha do Mel_2020
 artist: bruno
-co-artist:
+co-artist: fellipe
 image: >-
   /assets/images/6dd2bc09-c105-43ed-a91e-883a17e81011-a5fb831c-0f72-4877-abff-19dabbbbf924-editar-copiar.jpg
-description_html: Qual caminho estamos seguindo!? Para onde esses passos irão nos levar?
+description_html: >-
+  <p>Caminhar para longe</p><p>&Eacute; preciso</p><p>De falsas
+  promessas</p><p>De tanta
+  gan&acirc;ncia</p><p>Arrog&acirc;ncia</p><p>Ego&iacute;smo</p>
 dimensions: 60cm x 40cm
 orientation: Vertical
 print_standard: Felix Schoeller True Fibre 200g/m2
