Updated '_art/sumauma.html' via CloudCannon

--- a/_art/sumauma.html
+++ b/_art/sumauma.html
@@ -2,12 +2,13 @@
 layout: photo
 title: Sumaúma
 artist: fer
-co-artist:
+co-artist: alice
 image: /assets/images/sumauma.jpg
 description_html: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+  <p>Mergulhar nos</p><p>infinitos vastos</p><p>desses verdes que</p><p>me
+  enchem os</p><p>pulm&otilde;es</p><p>permitindo abrir-me</p><p>para o
+  mundo</p><p>natural</p><p>ser concha e</p><p>respeito</p><p>verdade e
+  sil&ecirc;ncio</p>
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
