Updated '_art/viridis-raiz-itapema.html' via CloudCannon

--- a/_art/viridis-raiz-itapema.html
+++ b/_art/viridis-raiz-itapema.html
@@ -2,12 +2,12 @@
 layout: photo
 title: Viridis
 artist: thais
-co-artist:
+co-artist: alice
 image: /assets/images/viridis---raiz.jpg
 description_html: >-
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, eos iusto
-  beatae vero, consequuntur quas impedit magni maxime aut porro veritatis, dolor
-  harum placeat quasi tenetur sequi repudiandae incidunt vel?
+  <p>Beijar a terra com os p&eacute;s</p><p>Enraizar o mundo com o
+  corpo</p><p>Encorporar meu eu na natureza</p><p>Interligar nossos n&oacute;s
+  ao tronco</p><p>Beijar o mundo,</p><p>do meu tronco ao universal.</p>
 dimensions: 60cm x 40cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
