Add select size options

--- a/_art/contrastes-gus-schiavon.html
+++ b/_art/contrastes-gus-schiavon.html
@@ -8,12 +8,21 @@ description_html: >-
   <p>Teia</p><p>n&atilde;o h&aacute; nada em mim</p><p>maior ou
   melhor</p><p>naquilo ou naquele</p><p>tudo que me toca</p><p>&eacute; fio que
   se conecta</p><p>ao outro</p><p>n&atilde;o sou</p><p>SOMOS</p>
-dimensions: 60cm x 90cm
+dimensions: 60cm x 40cm
 orientation: Portrait
 print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
-price: 1800
+price: 1200
 other_dimensions:
-  - size:
+  - size: 60cm x 90cm
+    price: 1750
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
