--- a/_art/escala-humana.html
+++ b/_art/escala-humana.html
@@ -13,7 +13,14 @@ orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
 price: 1300
-other_dimensions:
-  - size:
+other_dimensions: []
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
