--- a/_art/maracaipe-gus-schiavon.html
+++ b/_art/maracaipe-gus-schiavon.html
@@ -8,9 +8,18 @@ description_html: <p>Curvar-me aquilo que me &eacute; essencial</p>
 dimensions: 60cm x 90cm
 orientation: Portrait
 print_standard: Felix Schoeller True Fibre 200g/m2
-number_of_prints: 5
+number_of_prints: 10
 price: 1800
 other_dimensions:
-  - size:
+  - size: 60cm x 40cm
+    price: 1200
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
