--- a/_art/o-voo-fer-santos.html
+++ b/_art/o-voo-fer-santos.html
@@ -21,5 +21,14 @@ number_of_prints: 10
 price: 1300
 other_dimensions:
   - size: 90cm x 60cm
+    price:
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
