--- a/_art/sumauma.html
+++ b/_art/sumauma.html
@@ -15,5 +15,14 @@ number_of_prints: 10
 price: 1300
 other_dimensions:
   - size: 60cm x 90cm
+    price: TBD
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
