--- a/_art/escala-humana-ilha-do-melo-2018.html
+++ b/_art/escala-humana-ilha-do-melo-2018.html
@@ -14,7 +14,14 @@ orientation: Vertical
 print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
 price: 2000
-other_dimensions:
-  - size:
+other_dimensions: []
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
