--- a/_art/espelho.html
+++ b/_art/espelho.html
@@ -17,5 +17,14 @@ number_of_prints: 10
 price: 2000
 other_dimensions:
   - size: 40cm x 60cm
+    price: TBD
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
