--- a/_art/glaciar-perito-moreno.html
+++ b/_art/glaciar-perito-moreno.html
@@ -23,5 +23,14 @@ number_of_prints: 10
 price: 2000
 other_dimensions:
   - size: 60cm x 40cm
+    price:
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
