--- a/_art/mar-adentro-ilha-do-mel-2018-1.html
+++ b/_art/mar-adentro-ilha-do-mel-2018-1.html
@@ -12,7 +12,14 @@ orientation: Landscape
 print_standard: Fine Art 40gm
 number_of_prints: 10
 price: 2000
-other_dimensions:
-  - size:
+other_dimensions: []
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
 
