--- a/_art/paraiso-perdido-gus-schiavon.html
+++ b/_art/paraiso-perdido-gus-schiavon.html
@@ -8,8 +8,15 @@ description_html: Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa
 dimensions: 105cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
-number_of_prints: 10
-price: 2300
-other_dimensions:
-  - size:
+number_of_prints: 5
+price: 2500
+other_dimensions: []
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
