--- a/_art/texturas-do-mar-gus-schiavon.html
+++ b/_art/texturas-do-mar-gus-schiavon.html
@@ -9,7 +9,14 @@ dimensions: 60cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
-price: 1000
-other_dimensions:
-  - size:
+price: 600
+other_dimensions: []
+_array_structures:
+  other_dimensions:
+    values:
+      - label: Schedule
+        icon:
+        value:
+          size:
+          price:
 ---
