Add select size options

--- a/_art/paraiso-perdido-gus-schiavon.html
+++ b/_art/paraiso-perdido-gus-schiavon.html
@@ -12,24 +12,15 @@ description_html: >-
 dimensions: 105cm x 60cm
 orientation: Landscape
 print_standard: Felix Schoeller True Fibre 200g/m2
-<<<<<<< HEAD
 number_of_prints: 5
 price: 2500
 other_dimensions: []
 _array_structures:
   other_dimensions:
     values:
-      - label: Schedule
+      - label: 
         icon:
         value:
           size:
           price:
 ---
-=======
-number_of_prints: 10
-price: 2300
-other_dimensions:
-  - size:
----
-
->>>>>>> dd1c5da954f74d7403081496ee1d0346de395cc7
