--- a/checkout.html
+++ b/checkout.html
@@ -15,13 +15,11 @@ scripts_code_block: >-
       <p class="text-gray-200 uppercase font-body text-xl mb-4"><span class="text-xl font-bold">1.</span> Complete os dados:</p>
       <form id="checkout-form" action="/sucesso" method="post" class="checkout-form mb-8">
         <p class="text-yellow-400 uppercase font-heading text-lg">Dados pessoais:</p>
-        <input type="text" name="name" placeholder="Seu nome">
-        <input type="email" name="email" placeholder="Seu email">
-        <input type="tel" name="whatsapp" placeholder="Número para contato">
+        <input type="text" name="name" placeholder="Seu nome" required>
+        <input type="email" name="email" placeholder="Seu email" required>
+        <input type="tel" name="whatsapp" placeholder="Número para contato" required>
         <label for="image" class="text-yellow-400 uppercase font-heading text-lg">Imagem escolhida:</label>
-        <select type="select" name="image">
-          <option id="img-name" type="text" value="" selected></option>
-        </select>
+        <input type="hidden" value="" name="imagem" id="img-name">
         <input type="hidden" value="artist-inbox">
         <input id="to-email" type="hidden" name="_to" value="">
         <p class="text-gray-200 uppercase font-body text-xl my-4"><span class="text-xl font-bold">2.</span> Efetue o pagamento por Pix:</p>
@@ -91,7 +89,7 @@ scripts_code_block: >-
     reference.innerText = imageJSON.title + ' - ' + imageJSON.dimensions;
     artist.innerText = imageJSON.author;
     payment.innerText = imageJSON.payment;
-    reference.setAttribute('value',imageJSON.title);
+    reference.setAttribute('value',imageJSON.title + ' - ' + imageJSON.dimensions);
     contact.setAttribute('value', imageJSON.email);
   
     payment.onclick = function() {
