Updated '_art/mar-adentro-ilha-do-mel-2018-1.html' via CloudCannon

--- a/_art/mar-adentro-ilha-do-mel-2018-1.html
+++ b/_art/mar-adentro-ilha-do-mel-2018-1.html
@@ -11,8 +11,8 @@ dimensions: 60cmx90cm
 orientation: Landscape
 print_standard: Fine Art 40gm
 number_of_prints: 10
-price: 2000
-other_dimensions: []
+price: 2200
+other_dimensions:
 _array_structures:
   other_dimensions:
     values:
