Updated '_art/escala-humana-ilha-do-melo-2018.html' via CloudCannon

--- a/_art/escala-humana-ilha-do-melo-2018.html
+++ b/_art/escala-humana-ilha-do-melo-2018.html
@@ -13,8 +13,8 @@ dimensions: 60x90 cm
 orientation: Vertical
 print_standard: Felix Schoeller True Fibre 200g/m2
 number_of_prints: 10
-price: 2000
-other_dimensions: []
+price: 2200
+other_dimensions:
 _array_structures:
   other_dimensions:
     values:
